@@ -33,6 +33,7 @@ Date: ????
     - Comment wire connection blocks
     - Make the deciders for each of the conditions
     - Switch the condition combiners from decider to arithmetic
+    - Reuse struct.arithmetics where possible
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2024. 11. 04
